* proc.c (rb_vm_rewrite_dfp_in_errinfo): Fix `unexpected return'   occurs when a proc is called in ensure. [Backport #6460]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_3@36287 b2dd03c8-39d4-4d8f-98ff-823fe69b080e